# ds400-ps2-pygbm

./: .gitignore  .readthedocs.yaml  LICENSE  main.py  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pygbm.cli.rst  pygbm.gbm_simulator.rst  pygbm.rst  pygbm.version.rst
pygbm/: __init__.py  cli.py  gbm_simulator.py
tests/: test_gbm.py
